--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/Desktop/Taller de Programacion I/Práctico JUnit/TP Caja Negra/tp_caja negra/pga.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/LAUTARO/FACULTAD/TALLER DE PROGRAMACION I/TP Caja Negra/pga.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
